# server_info_rs

./: .gitignore  Cargo.toml  Dockerfile  EXAMPLE-docker-compose.yml  README.md  pull-build-deploy.sh
.github/workflows/: rust.yml
server_info_client_rs/: Cargo.toml
server_info_client_rs/src/: last_session.rs  main.rs  server_info_packet.rs
server_info_packets/: Cargo.toml
server_info_packets/src/: lib.rs  server_info_packet.rs
server_info_server_rs/: Cargo.toml
server_info_server_rs/src/: main.rs  server_info_packet.rs
