[package]
name = "server_info_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
chrono = "0.4.22"
chrono-tz = { version = "0.6.3", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }