[package]
name = "server_info_client_rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
chrono = "0.4.22"
chrono-tz = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sysinfo = "0.26.4"
server_info_packets = { path = "../server_info_packets" }
#simple_logger_rs = { git = "https://github.com/CoryRobertson/simple_logger_rs" }